--- a/publications.html
+++ b/publications.html
@@ -115,7 +115,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>High-quality Frame Interpolation via Tridirectional Inference</h3>
-		<p>Jinsoo Choi, Jaesik Park, In So Kweon<br>
+		<p>Jinsoo Choi, <b>Jaesik Park</b>, and In So Kweon<br>
 		Winter Conference on Applications of Computer Vision (<b>WACV</b>), 2021<br>
 		</p>
 		<a href="https://openaccess.thecvf.com/content/WACV2021/papers/Choi_High-Quality_Frame_Interpolation_via_Tridirectional_Inference_WACV_2021_paper.pdf" target="_blank" class="btn btn-default" role="button">
@@ -146,7 +146,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>ContraGAN: Contrastive Learning for Conditional Image Generation</h3>
-		<p>Minguk Kang and Jaesik Park<br>
+		<p>Minguk Kang and <b>Jaesik Park</b><br>
 		Conference on Neural Information Processing Systems (<b>NeurIPS</b>), 2020<br>
 		</p>
 		<a href="https://papers.nips.cc/paper/2020/file/f490c742cd8318b8ee6dca10af2a163f-Paper.pdf" target="_blank" class="btn btn-default" role="button">
@@ -168,7 +168,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Combinatorial 3D Shape Generation via Sequential Assembly</h3>
-		<p>Jungtaek Kim, Hyunsoo Chung, Minsu Cho, Jaesik Park<br>
+		<p>Jungtaek Kim, Hyunsoo Chung, Minsu Cho, and <b>Jaesik Park</b><br>
 		Machine Learning for Engineering Modeling, Simulation, and Design (ML4Eng, <b>NeurIPS workshop</b>), 2020<br>
 		</p>
 		<a href="https://arxiv.org/abs/2004.07414" target="_blank" class="btn btn-default" role="button">
@@ -190,7 +190,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Fragment Relation Networks for Geometric Shape Assembly</h3>
-		<p>Jinhwi Lee*, Jungtaek Kim*, Hyunsoo Chung, Jaesik Park, Minsu Cho<br>
+		<p>Jinhwi Lee*, Jungtaek Kim*, Hyunsoo Chung, <b>Jaesik Park</b>, and Minsu Cho<br>
 		Learning Meets Combinatorial Algorithms (LMCA, <b>NeurIPS workshop</b>), 2020<br>
 		*Equal contribution</p>
 		<a href="https://openreview.net/pdf?id=05KxJSXwPl" target="_blank" class="btn btn-default" role="button">
@@ -209,7 +209,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>HUMBI: A Large Multiview Dataset of Human Body Expressions</h3>
-		<p>Zhixuan Yu, Jaeshin Yoon, Inkyu Lee, Prashanth Venkatesh, Jaesik Park, Jihun Yu, Hyunsoo Park<br>
+		<p>Zhixuan Yu, Jaeshin Yoon, Inkyu Lee, Prashanth Venkatesh, <b>Jaesik Park</b>, Jihun Yu, and Hyunsoo Park<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
 		</p>
 		<a href="https://humbi-data.net" target="_blank" class="btn btn-default" role="button">
@@ -234,7 +234,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>High-Dimensional Convolutional Networks for Geometric Pattern Recognition</h3>
-		<p>Christopher Choy, Junha Lee, Rene Ranftl, Jaesik Park, Vladlen Koltun<br>
+		<p>Christopher Choy, Junha Lee, Rene Ranftl, <b>Jaesik Park</b>, and Vladlen Koltun<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
 		(<b>Oral</b> Presentation, 5.7% acceptance rate)</p>
 		<a href="http://jaesik.info/publications/data/20_cvpr_highconv.pdf" target="_blank" class="btn btn-default" role="button">
@@ -256,7 +256,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Future Video Synthesis with Object Motion Predictions</h3>
-		<p>Yue Wu, Rongrong Gao, Jaesik Park, Qifeng Chen<br>
+		<p>Yue Wu, Rongrong Gao, <b>Jaesik Park</b>, and Qifeng Chen<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2020<br>
 		</p>
 		<a href="http://jaesik.info/publications/data/20_cvpr_future.pdf" target="_blank" class="btn btn-default" role="button">
@@ -293,7 +293,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Fully Convolutional Geometric Features</h3>
-		<p>Christopher Choy*, Jaesik Park*, Vladlen Koltun<br>
+		<p>Christopher Choy*, <b>Jaesik Park</b>*, and Vladlen Koltun<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2019<br>
 		(*Equal contribution)</p>
 		<a href="http://jaesik.info/publications/data/19_iccv.pdf" target="_blank" class="btn btn-default" role="button">
@@ -315,7 +315,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Global Texture Mapping for Dynamic Objects</h3>
-		<p>Jungeon Kim, Hyomin Kim, Jaesik Park, Seungyong Lee<br>
+		<p>Jungeon Kim, Hyomin Kim, <b>Jaesik Park</b>, and Seungyong Lee<br>
 		Pacific Graphics (<b>PG</b>), 2019<br>
 		</p>
 		<a href="http://cg.postech.ac.kr/papers/2019_PG_Kim.pdf" target="_blank" class="btn btn-default" role="button">
@@ -334,7 +334,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>GPU Accelerated Robust Scene Reconstruction</h3>
-		<p>Wei Dong, Jaesik Park, Yi Yang, Michael Kaess<br>
+		<p>Wei Dong, <b>Jaesik Park</b>, Yi Yang, and Michael Kaess<br>
 		IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2019<br>
 		</p>
 		<a href="http://dongwei.info/publications/open3d-gpu.pdf" target="_blank" class="btn btn-default" role="button">
@@ -356,7 +356,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Depth from a Light Field Image with Learning-based Matching Costs</h3>
-		<p>Hae-Gon Jeon, Jaesik Park, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, In So Kweon<br>
+		<p>Hae-Gon Jeon, <b>Jaesik Park</b>, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon<br>
 		IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2019<br>
 		</p>
 		<a href="http://ieeexplore.ieee.org/document/8263242/" target="_blank" class="btn btn-default" role="button">
@@ -384,7 +384,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Tangent Convolutions for Dense Prediction in 3D</h3>
-		<p>Maxim Tatarchenko*, Jaesik Park*, Vladlen Koltun, Qian-Yi Zhou<br>
+		<p>Maxim Tatarchenko*, <b>Jaesik Park</b>*, Vladlen Koltun, and Qian-Yi Zhou<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2018<br>
 		(*Equal contribution. <b>Spotlight Oral</b> Presentation)</p>
 		<a href="http://vladlen.info/publications/tangent-convolutions-dense-prediction-3d/" target="_blank" class="btn btn-default" role="button">
@@ -409,7 +409,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Open3D: A Modern Library For 3D Data Processing</h3>
-		<p>Qian-Yi Zhou, Jaesik Park, Vladlen Koltun<br>
+		<p>Qian-Yi Zhou, <b>Jaesik Park</b>, and Vladlen Koltun<br>
 		Technical Report, arXiv:1801.09847, 2018<br>
 		<a class="github-button" href="https://github.com/intel-isl/open3d" data-icon="octicon-star" data-size="large" data-show-count="true" aria-label="Star intel-isl/open3d on GitHub">Star</a><a class="github-button" href="https://github.com/intel-isl/open3d/fork" data-icon="octicon-repo-forked" data-size="large" data-show-count="true" aria-label="Fork intel-isl/open3d on GitHub">Fork</a></p>
 		<a href="http://www.open3d.org" target="_blank" class="btn btn-default" role="button">
@@ -440,7 +440,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Real-time Head Pose Estimation using Multi-task Deep Neural Network</h3>
-		<p>Byungtae Ahn, Dong-Geol Choi, Jaesik Park, In So Kweon<br>
+		<p>Byungtae Ahn, Dong-Geol Choi, <b>Jaesik Park</b>, and In So Kweon<br>
 		Robotics and Autonomous Systems (<b>RAS</b>), 2018<br>
 		</p>
 		<a href="https://www.sciencedirect.com/science/article/pii/S0921889017303524" target="_blank" class="btn btn-default" role="button">
@@ -468,7 +468,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Colored Point Cloud Registration Revisited</h3>
-		<p>Jaesik Park, Qian-Yi Zhou, Vladlen Koltun<br>
+		<p><b>Jaesik Park</b>, Qian-Yi Zhou, and Vladlen Koltun<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2017<br>
 		</p>
 		<a href="http://redwood-data.org/indoor_lidar_rgbd/" target="_blank" class="btn btn-default" role="button">
@@ -496,7 +496,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Tanks and Temples: Benchmarking Large-Scale Scene Reconstruction</h3>
-		<p>Arno Knapitsch, Jaesik Park, Qian-Yi Zhou, Vladlen Koltun<br>
+		<p>Arno Knapitsch, <b>Jaesik Park</b>, Qian-Yi Zhou, and Vladlen Koltun<br>
 		ACM Transactions on Graphics (Proc. <b>SIGGRAPH</b>), 2017<br>
 		</p>
 		<a href="https://www.tanksandtemples.org/" target="_blank" class="btn btn-default" role="button">
@@ -527,7 +527,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Category Specific Salient View Selection via Deep Convolutional Neural Networks</h3>
-		<p>Seong heum Kim, Yu Wing Tai, Joon Young Lee, Jaesik Park, In So Kweon<br>
+		<p>Seong heum Kim, Yu Wing Tai, Joon Young Lee, <b>Jaesik Park</b>, and In So Kweon<br>
 		Computer Graphics Forum (<b>CGF</b>), 2017<br>
 		</p>
 		<a href="https://onlinelibrary.wiley.com/doi/abs/10.1111/cgf.13082" target="_blank" class="btn btn-default" role="button">
@@ -555,7 +555,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Robust Multiview Photometric Stereo using Planar Mesh Parameterization</h3>
-		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, In So Kweon<br>
+		<p><b>Jaesik Park</b>, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
 		IEEE Transactions on Pattern Analysis and Machine Intelligence (<b>TPAMI</b>), 2016<br>
 		</p>
 		<a href="http://jaesik.info/publications/multiviewps/index.html" class="btn btn-default" role="button">
@@ -574,7 +574,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Fast Global Registration</h3>
-		<p>Qian-Yi Zhou, Jaesik Park, Vladlen Koltun<br>
+		<p>Qian-Yi Zhou, <b>Jaesik Park</b>, and Vladlen Koltun<br>
 		European Conference on Computer Vision (<b>ECCV</b>), 2016<br>
 		(<b>Oral</b> Presentation, 1.8% acceptance rate)</p>
 		<a href="http://vladlen.info/publications/fast-global-registration/" target="_blank" class="btn btn-default" role="button">
@@ -599,7 +599,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Refining Geometry from Depth Sensors using IR Shading Images</h3>
-		<p>Gyeongmin Choe, Jaesik Park, Yu-Wing Tai, In So Kweon<br>
+		<p>Gyeongmin Choe, <b>Jaesik Park</b>, Yu-Wing Tai, and In So Kweon<br>
 		International Journal of Computer Vision (<b>IJCV</b>), 2016<br>
 		</p>
 		<a href="https://drive.google.com/file/d/1LsgtzkOt-z8W6iX8tHHV8H_XTqTOg-_q/view" target="_blank" class="btn btn-default" role="button">
@@ -618,7 +618,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Efficient and Robust Color Consistency for Community Photo Collections</h3>
-		<p>Jaesik Park, Yu-Wing Tai, Sudipta N. Sinha, In So Kweon<br>
+		<p><b>Jaesik Park</b>, Yu-Wing Tai, Sudipta N. Sinha, and In So Kweon<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2016<br>
 		</p>
 		<a href="http://jaesik.info/publications/photoconsistency/index.html" class="btn btn-default" role="button">
@@ -640,7 +640,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>High-quality Depth from Uncalibrated Small Motion Clip</h3>
-		<p>Hyowon Ha, Sunghoon Im, Jaesik Park, Hae-Gon Jeon, In So Kweon<br>
+		<p>Hyowon Ha, Sunghoon Im, <b>Jaesik Park</b>, Hae-Gon Jeon, and In So Kweon<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2016<br>
 		(<b>Oral</b> Presentation, 3.9% acceptance rate)</p>
 		<a href="https://sites.google.com/site/hyowoncv/ha_cvpr16" target="_blank" class="btn btn-default" role="button">
@@ -662,7 +662,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Vision System and Depth Processing for DRC-HUBO+</h3>
-		<p>Inwook Shim, Seunghak Shin, Yunsu Bok, Kyungdon Joo, Dong-Geol Choi, Joon-Young Lee, Jaesik Park, Jun Ho Oh, In So Kweon<br>
+		<p>Inwook Shim, Seunghak Shin, Yunsu Bok, Kyungdon Joo, Dong-Geol Choi, Joon-Young Lee, <b>Jaesik Park</b>, Jun Ho Oh, and In So Kweon<br>
 		IEEE International Conference on Robotics and Automation (<b>ICRA</b>), 2016<br>
 		Depth processing algorithm of Team KAIST (winner of DARPA robotics challenge finals 2015)</p>
 		<a href="https://sites.google.com/site/iwshimcv/drc-finals-2015" target="_blank" class="btn btn-default" role="button">
@@ -690,7 +690,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Multi-view Object Extraction with Fractional Boundaries</h3>
-		<p>Seong-Heum Kim, Yu-Wing Tai, Jaesik Park, In So Kweon<br>
+		<p>Seong-Heum Kim, Yu-Wing Tai, <b>Jaesik Park</b>, and In So Kweon<br>
 		IEEE Transaction on Image Processing (<b>TIP</b>), 2016<br>
 		Depth processing algorithm of Team KAIST (winner of DARPA robotics challenge finals 2015)</p>
 		<a href="http://jaesik.info/publications/data/16_tip.pdf" target="_blank" class="btn btn-default" role="button">
@@ -721,7 +721,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Dense Depth and Albedo from a Single-shot Structured Light</h3>
-		<p>Hyowon Ha, Jaesik Park, In So Kweon<br>
+		<p>Hyowon Ha, <b>Jaesik Park</b>, and In So Kweon<br>
 		International Conference on 3D Vision (<b>3DV</b>), 2015<br>
 		</p>
 		<a href="http://jaesik.info/publications/data/15_3dv.pdf" target="_blank" class="btn btn-default" role="button">
@@ -743,7 +743,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Accurate Depth Map Estimation from a Lenslet Light Field Camera</h3>
-		<p>Hae-Gon Jeon, Jaesik Park, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, In So Kweon<br>
+		<p>Hae-Gon Jeon, <b>Jaesik Park</b>, Gyeongmin Choe, Jinsun Park, Yunsu Bok, Yu-Wing Tai, and In So Kweon<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2015<br>
 		</p>
 		<a href="https://www.cv-foundation.org/openaccess/content_cvpr_2015/papers/Jeon_Accurate_Depth_Map_2015_CVPR_paper.pdf" target="_blank" class="btn btn-default" role="button">
@@ -765,7 +765,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Multi-modal Pedestrian Detection: Benchmark Dataset and Baselines</h3>
-		<p>SoonMin Hwang, Jaesik Park, Namil Kim, Yukyung Choi, In So Kweon<br>
+		<p>SoonMin Hwang, <b>Jaesik Park</b>, Namil Kim, Yukyung Choi, and In So Kweon<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2015<br>
 		</p>
 		<a href="https://sites.google.com/site/pedestrianbenchmark/" target="_blank" class="btn btn-default" role="button">
@@ -793,7 +793,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>High Quality Depth Map Upsampling and Completion for RGB-D Cameras</h3>
-		<p>Jaesik Park, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown, In-So Kweon<br>
+		<p><b>Jaesik Park</b>, Hyeongwoo Kim, Yu-Wing Tai, Michael S. Brown, and In-So Kweon<br>
 		IEEE Transaction on Image Processing (<b>TIP</b>), 2014<br>
 		</p>
 		<a href="http://jaesik.info/web_inplace=publications/depthups/index.html" class="btn btn-default" role="button">
@@ -812,7 +812,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Real-time Head Orientation from a Monocular Camera using Deep Neural Network</h3>
-		<p>Byungtae Ahn, Jaesik Park, In So Kweon<br>
+		<p>Byungtae Ahn, <b>Jaesik Park</b>, and In So Kweon<br>
 		Asian Conference on Computer Vision (<b>ACCV</b>), 2014<br>
 		</p>
 		<a href="http://jaesik.info/publications/data/14_accv.pdf" target="_blank" class="btn btn-default" role="button">
@@ -834,7 +834,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>GMM-based Saliency Aggregation for Calibration-free Gaze Estimation</h3>
-		<p>Jinsoo Choi, Byungtae Ahn, Jaesik Park, In So Kweon<br>
+		<p>Jinsoo Choi, Byungtae Ahn, <b>Jaesik Park</b>, and In So Kweon<br>
 		International Conference on Image Processing (<b>ICIP</b>), 2014<br>
 		</p>
 		<a href="http://jaesik.info/publications/data/14_icip.pdf" target="_blank" class="btn btn-default" role="button">
@@ -856,7 +856,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Exploiting Shading Cues in Kinect IR Images for Geometry Refinement</h3>
-		<p>Gyeongmin Choe*, Jaesik Park*, Yu-Wing Tai, In So Kweon<br>
+		<p>Gyeongmin Choe*, <b>Jaesik Park</b>*, Yu-Wing Tai, and In So Kweon<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2014<br>
 		=*Equal contributions. Received 20th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp.</p>
 		<a href="https://sites.google.com/site/gmchoe1/kinir" target="_blank" class="btn btn-default" role="button">
@@ -875,7 +875,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Calibrating a Non-isotropic Near Point Light Source using a Plane</h3>
-		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, In So Kweon<br>
+		<p><b>Jaesik Park</b>, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2014<br>
 		</p>
 		<a href="http://jaesik.info/web_inplace=publications/lightcalib/index.html" class="btn btn-default" role="button">
@@ -903,7 +903,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Multiview Photometric Stereo using Planar Mesh Parameterization</h3>
-		<p>Jaesik Park, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, In So Kweon<br>
+		<p><b>Jaesik Park</b>, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2013<br>
 		Received 19th HumanTech Paper Award (Silver Prize), Samsung Electronics Corp.</p>
 		<a href="http://jaesik.info/publications/multiviewps/index.html" class="btn btn-default" role="button">
@@ -931,7 +931,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Tensor Voting Approach for Multi-View 3D Scene-flow Estimation and Refinement</h3>
-		<p>Jaesik Park, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, In So Kweon<br>
+		<p><b>Jaesik Park</b>, Tae Hyun Oh, Jiyoung Jung, Yu-Wing Tai, and In So Kweon<br>
 		European Conference on Computer Vision (<b>ECCV</b>), 2012<br>
 		</p>
 		<a href="http://jaesik.info/publications/data/12_eccv.pdf" target="_blank" class="btn btn-default" role="button">
@@ -956,7 +956,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Modeling Photo Composition and Its Application to Photo Re-arrangement</h3>
-		<p>Jaesik Park, Joon-Young Lee, Yu-Wing Tai, In So Kweon<br>
+		<p><b>Jaesik Park</b>, Joon-Young Lee, Yu-Wing Tai, and In So Kweon<br>
 		International Conference on Image Processing (<b>ICIP</b>), 2012<br>
 		</p>
 		<a href="http://jaesik.info/publications/data/12_icip.pdf" target="_blank" class="btn btn-default" role="button">
@@ -981,7 +981,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Identigram/Watermark removal using cross-channel correlation</h3>
-		<p>Jaesik Park, Yu-Wing Tai, In-So Kweon<br>
+		<p><b>Jaesik Park</b>, Yu-Wing Tai, and In-So Kweon<br>
 		Conference on Computer Vision and Pattern Recognition (<b>CVPR</b>), 2012<br>
 		</p>
 		<a href="http://jaesik.info/publications/identigram/index.html" class="btn btn-default" role="button">
@@ -1009,7 +1009,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>A Novel 2.5D Pattern for Extrinsic Calibration of ToF and Camera Fusion System</h3>
-		<p>Jiyoung Jung, Yekeun Jeong, Jaesik Park, Hyowon Ha, J. D. Kim, In-So Kweon<br>
+		<p>Jiyoung Jung, Yekeun Jeong, <b>Jaesik Park</b>, Hyowon Ha, J. D. Kim, and In-So Kweon<br>
 		IEEE/RSJ International Conference on Intelligent Robots and Systems (<b>IROS</b>), 2011<br>
 		</p>
 		<a href="http://jaesik.info/publications/data/11_iros.pdf" target="_blank" class="btn btn-default" role="button">
@@ -1028,7 +1028,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>High Quality Depth Map Upsampling for 3D-TOF Cameras</h3>
-		<p>Jaesik Park*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown, In-So Kweon<br>
+		<p><b>Jaesik Park</b>*, Hyeongwoo Kim*, Yu-Wing Tai, Michael S. Brown, and In-So Kweon<br>
 		International Conference on Computer Vision (<b>ICCV</b>), 2011<br>
 		*Equal contributions</p>
 		<a href="http://jaesik.info/publications/depthups/index.html" class="btn btn-default" role="button">
@@ -1037,6 +1037,33 @@
 	</div>
 </div>
 <div class="row" style="height: 30px">
+</div>
+</div>
+
+<hr>
+<div class="container">
+<div class="row">
+	<div class="col-lg-12 text-left">
+		<h2 class="name">2009</h2>
+	</div>
+</div>
+</div>
+
+<hr>
+<div class="container">
+<div class="row">
+	<div class="col-lg-12 text-left">
+		<h2 class="name">2006</h2>
+	</div>
+</div>
+</div>
+
+<hr>
+<div class="container">
+<div class="row">
+	<div class="col-lg-12 text-left">
+		<h2 class="name">2005</h2>
+	</div>
 </div>
 </div>
 
