--- a/publications.html
+++ b/publications.html
@@ -111,6 +111,44 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_scientific_reports.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Accelerated crystal structure prediction of multi-elements random alloy using expandable features</h3>
+		<p>Taewon Jin, Taesoo Park, In ah Park, <b>Jaesik Park</b>, and Ji Hoon Shim<br>
+		<b>Scientific Reports</b> published by Nature Research, 2021<br>
+		</p>
+		<a href="http://jaesik.info/" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
+		<img src="publications/data/21_eurographics.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>Spatiotemporal Texture Reconstruction for Dynamic Objects Using a Single RGB-D Camera</h3>
+		<p>Hyomin Kim, Jungeon Kim, Hyeonseo Nam, <b>Jaesik Park</b>, and Seungyong Lee<br>
+		42nd Annual Conference of the European Association for Computer Graphics (<b>EuroGraphics</b>), 2021<br>
+		</p>
+		<a href="http://jaesik.info/" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/21_wacv.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
