replace record class with json

--- a/publications.html
+++ b/publications.html
@@ -118,7 +118,7 @@
 		<p>Taewon Jin, Taesoo Park, In ah Park, <b>Jaesik Park</b>, and Ji Hoon Shim<br>
 		<b>Scientific Reports</b> published by Nature Research, 2021<br>
 		</p>
-		<a href="http://jaesik.info/" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 	</div>
@@ -137,7 +137,7 @@
 		<p>Hyomin Kim, Jungeon Kim, Hyeonseo Nam, <b>Jaesik Park</b>, and Seungyong Lee<br>
 		42nd Annual Conference of the European Association for Computer Graphics (<b>EuroGraphics</b>), 2021<br>
 		</p>
-		<a href="http://jaesik.info/" target="_blank" class="btn btn-default" role="button">
+		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
 			<span class="glyphicon glyphicon-file"></span> Paper
 		</a>
 	</div>
@@ -1075,33 +1075,6 @@
 	</div>
 </div>
 <div class="row" style="height: 30px">
-</div>
-</div>
-
-<hr>
-<div class="container">
-<div class="row">
-	<div class="col-lg-12 text-left">
-		<h2 class="name">2009</h2>
-	</div>
-</div>
-</div>
-
-<hr>
-<div class="container">
-<div class="row">
-	<div class="col-lg-12 text-left">
-		<h2 class="name">2006</h2>
-	</div>
-</div>
-</div>
-
-<hr>
-<div class="container">
-<div class="row">
-	<div class="col-lg-12 text-left">
-		<h2 class="name">2005</h2>
-	</div>
 </div>
 </div>
 
