--- a/publications/lightcalib/index.html
+++ b/publications/lightcalib/index.html
@@ -90,6 +90,30 @@
 	<h2>Abstract</h2>
 	<p> We show that a non-isotropic near point light source rigidly attached to a camera can be calibrated using multiple images of a weakly textured planar scene. We prove that if the radiant intensity distribution (RID) of a light source is radially symmetric with respect to its dominant direction, then the shading observed on a Lambertian scene plane is bilaterally symmetric with respect to a 2D line on the plane. The symmetry axis detected in an image provides a linear constraint for estimating the dominant light axis. The light position and RID parameters can then be estimated using a linear method. Specular highlights if available can also be used for light position estimation. We also extend our method to handle non-Lambertian reflectances which we model using a biquadratic BRDF. We have evaluated our method on synthetic data quantitavely. Our experiments on real scenes show that our method works well in practice and enables light calibration without the need of a specialized hardware.</p>
 </div>
+<div class="col-lg-8 col-lg-offset-2">
+	<h2>Publication(s)</h2>
+		<h3>Calibrating a Non-isotropic Near Point Light Source using a Plane</h3>
+		<p><b>Jaesik Park</b>, Sudipta N. Sinha, Yasuyuki Matsushita, Yu-Wing Tai, and In So Kweon<br>
+		CVPR, 2014<br>
+		(Dataset has raw images used in the experiment. Note that the size of this file is 2.15GB)</p>
+		<a href="http://jaesik.info/publications/lightcalib/paper.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+		<a href="http://jaesik.info/publications/lightcalib/supp.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-paperclip"></span> Supplementary
+		</a>
+		<a href="http://jaesik.info/publications/lightcalib/poster.pdf" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-blackboard"></span> Poster
+		</a>
+		<a href="http://jaesik.info/publications/lightcalib/bibtex.txt" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-list"></span> Bibtex
+		</a>
+		<a href="https://postechackr-my.sharepoint.com/:u:/g/personal/jaesik_postech_ac_kr/Ebnodir1zzhJgiQupYkhyuQBsCLfAkNNKZPqx3eS-ihw5w?e=evJ2I5" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-download-alt"></span> Data
+		</a>
+		<p><br></p>
+</div>
+
 <!-- Footer -->
 <footer>
 		<div class="container">
