--- a/lab.html
+++ b/lab.html
@@ -167,7 +167,7 @@
 		</div>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/ganghee.jpeg" class="img-responsive img-circle img-thumbnail">
-			<h4>Ganghee Lee</h4>
+			<h4>Kanghee Lee</h4>
 			2021 Spring<br>
 			Master student<br><br>
 		</div>
