--- a/publications.html
+++ b/publications.html
@@ -115,7 +115,7 @@
 	</div>
 	<div class="col-lg-7">
 		<h3>Accelerated crystal structure prediction of multi-elements random alloy using expandable features</h3>
-		<p>Taewon Jin, Taesoo Park, In ah Park, <b>Jaesik Park</b>, and Ji Hoon Shim<br>
+		<p>Taewon Jin, Taesoo Park, Ina Park, <b>Jaesik Park</b>, and Ji Hoon Shim<br>
 		<b>Scientific Reports</b> published by Nature Research, 2021<br>
 		</p>
 		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
