revise paper name

--- a/publications.html
+++ b/publications.html
@@ -114,7 +114,7 @@
 		<img src="publications/data/21_scientific_reports.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
-		<h3>Accelerated crystal structure prediction of multi-elements random alloy using expandable features</h3>
+		<h3>Accelerated Crystal Structure Prediction of Multi-elements Random Alloy using Expandable Features</h3>
 		<p>Taewon Jin, Taesoo Park, Ina Park, <b>Jaesik Park</b>, and Ji Hoon Shim<br>
 		<b>Scientific Reports</b> published by Nature Research, 2021<br>
 		</p>
