--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
+						2021.03. <a href="https://github.com/intel-isl/open3d">Open3D</a> received 4.1k Github stars and <a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN">Pytorch-StudioGAN</a> received 1.2k Github stars.
+					</li>
+					<li class="list-group-item">
 						2020.11. I will serve as an Area Chair for <b>ICCV 2021</b>.
 					</li>
 					<li class="list-group-item">
