--- a/source/index.html
+++ b/source/index.html
@@ -13,7 +13,7 @@
 				<h2> <span class="glyphicon glyphicon-fire"></span> News</h2>
 				<ul class="list-group">
 					<li class="list-group-item">
-						2021.03. <a href="https://github.com/intel-isl/open3d">Open3D</a> received 4.1k Github stars and <a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN">Pytorch-StudioGAN</a> received 1.2k Github stars.
+						2021.03. <b><a href="https://github.com/intel-isl/open3d">Open3D</a></b> received 4.1k Github stars and <b><a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN">Pytorch-StudioGAN</a></b> received 1.2k Github stars.
 					</li>
 					<li class="list-group-item">
 						2020.11. I will serve as an Area Chair for <b>ICCV 2021</b>.
@@ -23,21 +23,6 @@
 					</li>
 					<li class="list-group-item">
 						2020.09. A paper about conditional image generation is accepted to <b>NeurIPS 2020</b>.
-					</li>
-					<li class="list-group-item">
-						2020.08. I will serve as an Senior Program Committee for <b>AAAI 2021</b>.
-					</li>
-					<li class="list-group-item">
-						2020.07. I will serve as an Area Chair for <b>CVPR 2021</b>.
-					</li>
-					<li class="list-group-item">
-						2020.07. We open <b><a href="https://humbi-data.net">humbi-data.net</a></b> that is a large corpus of high fidelity 3D human models.
-					</li>
-					<li class="list-group-item">
-						2020.06. We are releasing <b><a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN">Pytorch-StudioGAN</a></b> that provides the implementation of representative GANs for image synthesis.
-					</li>
-					<li class="list-group-item">
-						2020.03. Three papers got accepted to <b>CVPR 2020</b>.
 					</li>
 					<div id="accordion">
 						<div class="card">
@@ -50,6 +35,22 @@
 								</h5>
 							</div>
 							<div id="collapse-previous-news" class="collapse" aria-labelledby="heading-previous-news" data-parent="#accordion">
+								<li class="list-group-item">
+									2020.08. I will serve as an Senior Program Committee for <b>AAAI 2021</b>.
+								</li>
+								<li class="list-group-item">
+									2020.07. I will serve as an Area Chair for <b>CVPR 2021</b>.
+								</li>
+								<li class="list-group-item">
+									2020.07. We open <b><a href="https://humbi-data.net">humbi-data.net</a></b> that is a large corpus of high fidelity 3D human models.
+								</li>
+								<li class="list-group-item">
+									2020.06. We are releasing <b><a href="https://github.com/POSTECH-CVLab/PyTorch-StudioGAN">Pytorch-StudioGAN</a></b> that provides the implementation of representative GANs for image synthesis.
+								</li>
+								<li class="list-group-item">
+									2020.03. Three papers got accepted to <b>CVPR 2020</b>.
+								</li>
+			
 								<li class="list-group-item">
 									2020.02. I will visit San Diego to attend CVPR 2020 AC meeting.
 								</li>
