minor update on the contacts

--- a/contact.html
+++ b/contact.html
@@ -113,8 +113,9 @@
 				<li class="list-group-item">
 					<h3 class="name"> <span class="glyphicon glyphicon-education"></span> To apply lab</h3>
 					1) Please send your CV to me via email.<br>
-					2) Apply <a href="http://admission.postech.ac.kr/" target="_blank"> POSTECH graduate school</a>.<br>
-					3) Once approved, schedule an online/offline meeting with me.</a>
+					2-1) Fill out <a href="https://forms.gle/xrQLcT1cefHZuaG67" target="_blank">this form</a>.<br>
+					2-2) Apply <a href="https://adm-g.postech.ac.kr/ENG/" target="_blank"> POSTECH graduate school</a>.<br>
+					3) Once approved, I will announce online/offline meeting schedule.</a>
 				</li>
 			</ul>
 		</div>
