--- a/lab.html
+++ b/lab.html
@@ -173,7 +173,7 @@
 		</div>
 		<div class="col-xs-3 text-center">
 			<img src="source/images/seungju.jpeg" class="img-responsive img-circle img-thumbnail">
-			<h4>Seungju Shin</h4>
+			<h4>Seungjoo Shin</h4>
 			2021 Fall<br>
 			Master student<br><br>
 		</div>
