--- a/publications.html
+++ b/publications.html
@@ -111,6 +111,25 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
+		<img src="" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+	</div>
+	<div class="col-lg-7">
+		<h3>STAD: Stable Video Depth Estimation</h3>
+		<p>Hyunmin Lee and <b>Jaesik Park</b><br>
+		IEEE International Conference on Image Processing (ICIP), 2021<br>
+		</p>
+		<a href="http://jaesik.info/#" target="_blank" class="btn btn-default" role="button">
+			<span class="glyphicon glyphicon-file"></span> Paper
+		</a>
+	</div>
+</div>
+<div class="row" style="height: 30px">
+</div>
+</div>
+
+<div class="container">
+<div class="row">
+	<div class="col-lg-4 col-lg-offset-1">
 		<img src="publications/data/21_scientific_reports.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
