minor fixes and cv available to download

--- a/about_me.html
+++ b/about_me.html
@@ -146,6 +146,14 @@
 			</li>
 			</ul>
 	</div>
+	<div class="col-lg-6 text-left">
+		<h2> <span class="glyphicon glyphicon-th-list"></span>   Curriculum Vitae</h2>
+		<ul class="list-group">
+		<li class="list-group-item">
+			Please download <a href="cv_jaesik_park.pdf" target="_blank">cv_jaesik_park.pdf</a>
+		</li>
+		</ul>
+</div>
 </div>
 <!-- Footer -->
 <footer>
