--- a/publications.html
+++ b/publications.html
@@ -111,7 +111,7 @@
 <div class="container">
 <div class="row">
 	<div class="col-lg-4 col-lg-offset-1">
-		<img src="" style="max-height:170px" class="img-responsive center-block img-thumbnail">
+		<img src="publications/data/21_scientific_reports.jpg" style="max-height:170px" class="img-responsive center-block img-thumbnail">
 	</div>
 	<div class="col-lg-7">
 		<h3>STAD: Stable Video Depth Estimation</h3>
